<?xml version="1.0"?>
<package>
	<name>ros_arduino_gps</name>
	<version>0.0.0</version>
	<description>The ros_arduino_gps package</description>

	<maintainer email="marekl@todo.todo">marekl</maintainer>

	<license>MIT?</license>

	<!-- <url type="website">http://wiki.ros.org/ros_arduino_gps</url> -->

	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>serial</build_depend>
	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>serial</run_depend>

</package>